--- a/app/views/blogit/comments/_comment.html.erb
+++ b/app/views/blogit/comments/_comment.html.erb
@@ -1,6 +1,7 @@
 <%= content_tag(:article, id: "blog_comment_#{comment.id}", class: "blog_comment") do %>
   <%= content_tag(:div, class: "blog_comment_name", id: "blog_comment_#{comment.id}_name") do %>
-    <%=t :wrote, scope: 'blogit.comments', author: comment.website? ? link_to(comment.name, comment.website) : comment.name %>
+    <%= comment.website? ? link_to(comment.name, comment.website) : comment.name %>
+    <%= t('blogit.comments.wrote') %>
   <% end %>
 
 
